Fix the code. Add proper etiquete.
Gavin. You should comment all your code. Its practically unreadable. Just a simple header at the top of each new major section that explains what its for and the aims of the code.

--- a/public/pages/Robots/Cobalt/cobalt.css
+++ b/public/pages/Robots/Cobalt/cobalt.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'Anurati';
-    src: url('../../assets/fonts/Anurati-Regular.otf') format('opentype');
+    src: url('../../../assets/fonts/Anurati-Regular.otf') format('opentype');
 }
 
 * {
@@ -16,7 +16,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: 'Comfortaa';
+    font-family: 'Comfortaa', sans-serif;
     font-weight: 400;
 }
 
@@ -24,20 +24,6 @@ html {
     height: 100%;
 }
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 3vh;
-    color: white;
-    padding: 0 50px;
-    position: fixed;
-    top: 5%; 
-    width: calc(100% - 100px); 
-    margin: 0 auto; 
-    z-index: 1000;
-    transition: top 0.3s;
-}
 
 .nav-links {
     list-style: none;
@@ -54,7 +40,7 @@ html {
 .nav-links a {
     color: white;
     text-decoration: none;
-    font-family: "Comfortaa";
+    font-family: "Comfortaa", sans-serif;
     font-size: 1.2rem;
     font-weight: 400;
     padding: 10px 15px; 
@@ -80,7 +66,7 @@ html {
 
 .footer {
     background-color: black;
-    font-family: 'Comfortaa';
+    font-family: 'Comfortaa', sans-serifS;
     text-align: center;
     padding: 70px 0;
     position: relative;
